<resources>
    <string name="app_name">Avatar</string>
    <string name="hint_name">Имя</string>
    <string name="hello_user">Здраствуйте, введите пожалуйста ваше имя</string>
    <string name="btn_enter">Войти</string>
    <string name="fire">Народ Огня</string>
    <string name="water">Племя Воды</string>
    <string name="earth">Царство Земли</string>
    <string name="air">Воздушные кочевники</string>
    <string name="appa">Аппа</string>
    <string name="dok_char">character from Avatar</string>
    <string name="map">map</string>
    <string name="no_user_input">Введите имя для входа</string>
    <string name="main_img">Постор из мультфильма Аватар</string>


    <string name="water_description">Племя Воды - одна из наций Мира Аватара. Это конфедеративное вождество, не имеющее единой столицы, армии и руководителя. Племя Воды делится на две основные группы, которые живут на разных полюсах: Северное Племя Воды и Южное Племя Воды. Существует также племя, находящееся на Туманном болоте в Царстве Земли, которое сильно отличается от остальных племён.</string>
    <string name="water_g_heading">География</string>

    <string name="water_g_description">Племена Воды располагаются на Северном и Южном полюсах, где вечная суровая зима. На Севере, как и на Юге, бескрайняя тундра, в которой периодически встречаются горы, возвышенности, пещеры и прочие геологические образования. На самих полюсах находятся Порталы Духов, которые позволяют физически проникнуть в Мир Духов. Вокруг этих порталов расположен погибший священный лес. На Юге также встречаются хвойные леса, растущие близь побережья.</string>

    <string name="culture_water">Культура племён Воды</string>
    <string name="culture_water_description">Хотя племя Воды достаточно однородно в основной массе своих проявления и традиций, тем не менее его стоит разделять на три составляющие части. Также следует отметить, что после начала войны и на всём её протяжении контакты между племенами ослабли, а где-то и вовсе прекратились. Но известно, что до войны Южное и Северное Племена Воды каждый год встречались в период первого новолуния зимы. Культура и быт племени Воды очень схож с таковыми коренных народов севера Северной Америки.</string>


    <string name="culture_earth">Культура Царства Земли</string>
    <string name="earth_description">Царство Земли - одна из наций Мира Аватара. Это конфедеративная монархия, управляемая царём. Массивный континент занимает почти всё восточное полушарие планеты, а северная его часть недалека от Северного племени воды. Столица Царства Земли - Ба Синг Се.</string>
    <string name="earth_g_description">Из-за огромного размера Царства, география его территорий - самая разнообразная. В центре больше всего преобладают засушливые луга и пустыни (например, пустыня Ши Вонг, которая распространяется на юго-востоке). Северо-западное побережье густо покрыто сосновыми лесами - дальше на юг они заменены на субтропические лиственные. Площадь, на которой стоит Омашу и вокруг него, довольно гористая, с небольшими зарослями сосны и преобладанием степей.</string>
    <string name="culture_earth_description">Культура Царства Земли мало раскрыта из-за того, что оно имеет огромные территории. Однако многие утверждают, что оно скорее напоминает Восточную Азию (Китай или Корею) своей архитектурой, географией и менталитетом граждан.Архитектура и внешний вид зависят от того, город это или провинция. Преобладают зелёный и белый цвета, их используют почти везде.</string>

    <string name="fire_descriptions">Народ Огня - одна из наций мира Аватара. Страна Огня - островное государство, расположенное к западу от Царства Земли, по форме правления - абсолютная монархия, возглавляемая Хозяином Огня, резиденция которого находится в столице. Страна Огня - вторая в мире после Царства Земли по численности населения и занимаемой территории, а по экономике и промышленности - первая.
    </string>
    <string name="fire_g_description">Страна Огня расположена на архипелаге тропических островов вулканического происхождения, большинство вулканов активны и используются народом Огня в различных целях (в одном из таких вулканов находится кипящее озеро, посреди которого построена тюрьма Кипящая скала, а в вулкане недалеко от столицы сооружён бункер). Угольный остров считается местом хорошего отдыха. Благодаря тёплому и влажному климату в стране Огня много разнообразной флоры и фауны, хотя на многих островах леса вырублены.</string>
    <string name="culture_fire">Культура народа Огня</string>
    <string name="culture_fire_description">Народ Огня особое значение придаёт чести и уважению, особенно в отношении старших по возрасту и званию. Концепция Агни Кая основана на этом понятии. Удостоившись чести находиться в присутствии члена правящей семьи, необходимо низко поклониться или пасть ниц, иначе поведение расценят как неуважительное и могут вызвать на Агни Кай за оскорбление чести. Старшим по возрасту и званию принято кланяться, сложив руки в характерном приветствии: кулак правой руки прикладывается снизу к вертикально поставленной левой ладони. </string>

    <string name="air_descriptions">
        Воздушные кочевники - одна из наций Мира Аватара. В прошлом это теократия, управляемая Советом старейшин четырёх Храмов Воздуха. После войны - абсолютная монархия, управляемая потомками последнего мага воздуха. Столица отсутствует. Во времена Аватара Корры фактическим центром был Островной Храм Воздуха.
    </string>

    <string name="air_culture_h">Культура Воздушных кочевников</string>
    <string name="air_culture_descriptions">У Кочевников отсутствует разделение общества на мужчин и женщин, как это видно, к примеру, у Северного Племени Воды. У магов воздуха все равны, все изучают и используют магию и могут состоять в Совете. Однако монахи и монахини живут раздельно. Монахи в Северном и Южном Храме, а монахини в Западном и Восточном. Но это разделение скорее нравственное, чем дискриминирующее.</string>
    <string name="air_g_description">Для территорий, на которых расположены Храмы, характерна горная местность. Обычно они расположены на самой вершине и без летающих средств туда никак не добраться. Всего 4 Храма на 4 стороны света. Два из них служили для обучения женщин и два для мужчин. Мальчиков из Южного Храма, как известно, отправляли в Восточный, чтобы те выбрали себе зубра. Этот летающий и умный зубр был бы с хозяином до конца жизни. Кроме зубров, также крылатые лемуры были символом и питомцами магов воздуха.</string>


</resources>